--- a/.webpackrc
+++ b/.webpackrc
@@ -7,5 +7,8 @@
                 "^/v1": "/v1"
             }
         }
-    }
+    },
+    "extraBabelPlugins": [
+        ["import", { "libraryName": "antd", "libraryDirectory": "es", "style": "css" }]
+    ]
 }
