--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
+    "antd": "^3.8.2",
     "babel-plugin-dva-hmr": "^0.3.2",
+    "babel-plugin-import": "^1.8.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-runtime": "^6.26.0",
     "eslint": "^4.14.0",
     "eslint-config-umi": "^0.1.1",
     "eslint-plugin-flowtype": "^2.34.1",
