--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "dva": "^2.3.2",
+    "dva-loading": "^2.0.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
@@ -17,6 +18,7 @@
     "babel-plugin-import": "^1.8.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-runtime": "^6.26.0",
+    "dva-loading": "^2.0.5",
     "eslint": "^4.14.0",
     "eslint-config-umi": "^0.1.1",
     "eslint-plugin-flowtype": "^2.34.1",
